--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
+    "image-webpack-loader": "^8.0.1",
     "lint-staged": "^9.5.0",
     "typescript": "~4.1.5",
     "vue-jest": "^5.0.0-0"
